Fixed spacing for mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,7 @@ h2 {
 }
 
 .maincontainer {
-  margin-top: 1em;
+  margin-top: 5em;
   margin-bottom: 1em;
 }
 
